...
                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" verticalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DdJ-Oh-JYy">
                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="40"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="TextField1"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="40" id="Whx-Kq-8eI"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9Py-Zf-c8j">
                                                        <rect key="frame" x="0.0" y="50" width="374" height="40"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="TextField2"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="40" id="Gdb-TY-uQy"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HhN-hV-a6J">
                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="34.5"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Button1"/>
                                                        <state key="normal" title="Button"/>
                                                        <buttonConfiguration key="configuration" style="plain" title="All matching letters"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oSc-Zg-lOv">
                                                        <rect key="frame" x="0.0" y="34.5" width="374" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Label1"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="30" id="qsI-BN-NEk"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LIf-ac-3BT">
                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="34.5"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Button2"/>
                                                        <state key="normal" title="Button"/>
                                                        <buttonConfiguration key="configuration" style="plain" title="All characters that do not match"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2sb-rm-4FC">
                                                        <rect key="frame" x="0.0" y="34.5" width="374" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Label2"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="30" id="r3m-37-eMa"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JcA-wr-DwL">
                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="54.5"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Button3"/>
                                                        <state key="normal" title="Button"/>
                                                        <buttonConfiguration key="configuration" style="plain" title="All unique characters from the first textfield that do not match in the second"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3LS-Zr-NLU">
                                                        <rect key="frame" x="0.0" y="54.5" width="374" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Label3"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="30" id="O4B-nv-LSQ"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Set" id="9ja-Rz-QXa"/>
                    <connections>
                        <outlet property="allMatchingLettersLabel" destination="oSc-Zg-lOv" id="9ww-zm-moy"/>
...
